logs/olypy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/olymap'...
Compiling './lib/python3.5/site-packages/olymap/char.py'...
***   File "./lib/python3.5/site-packages/olymap/char.py", line 323
    outf.write('<td style="text-align:right">{}</td>'.format(f"{item_qty:,d}"))
                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/olymap/reports.py'...
***   File "./lib/python3.5/site-packages/olymap/reports.py", line 1144
    outf.write('<td>{}</td>'.format(f"{item_qty:,d}"))
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/olypy'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/fact'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/600'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/610'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/630'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/650'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/670'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/680'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/690'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/700'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/720'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/730'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/750'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/800'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/820'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/840'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/860'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/880'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/900'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/920'...
Listing './lib/python3.5/site-packages/olypy/mapgen-lib/lore/etc'...
Listing './lib/python3.5/site-packages/olypy/template-lib'...
Listing './lib/python3.5/site-packages/olypy/template-lib/fact'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/600'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/610'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/630'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/650'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/670'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/680'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/690'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/700'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/720'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/730'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/750'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/800'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/820'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/840'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/860'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/880'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/900'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/920'...
Listing './lib/python3.5/site-packages/olypy/template-lib/lore/etc'...
Listing './lib/python3.5/site-packages/olypy-0.9.40.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pngcanvas-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
